# opspilot

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md  release-template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  release.yml  test.yml
opspilot/: __init__.py  config.example.yaml  config.py  main.py
opspilot/agent/: __init__.py  core.py  memory.py
opspilot/agent/tools/: __init__.py  files.py  system.py
opspilot/tui/: __init__.py  __main__.py  api_keys_manager.py  app.py  chats_manager.py  config.py  locations.py  models.py  opspilot.scss  runtime_config.py  screens.py  styles.tcss  themes.py
opspilot/tui/database/: converters.py  database.py  import_chatgpt.py  models.py
opspilot/tui/screens/: chat_details.py  chat_screen.py  help_screen.py  home_screen.py
opspilot/tui/widgets/: agent_is_typing.py  app_header.py  chat.py  chat_header.py  chat_list.py  chat_options.py  chatbox.py  prompt_input.py  welcome.py
tests/: __init__.py  test_agent_core.py  test_config.py  test_memory.py  test_system_tool.py
